# tiltrotor

./: 10020_gazebo-classic_iris_tiltrotor  README.md  flight_controller.cfg  flight_controller.launch  flight_controller_main.cpp
include/: flight_controller.h
model_plugins/: CMakeLists.txt  joint_setposition_plugin.cc  package.xml
model_plugins/src/: controller_setposition_plugin.cc  gazebo_joint_torsional_spring.cc  gripper_joint_plugin.cc
models/cable_modelA/: cable_modelA.sdf  cable_modelA.xacro  model.config
models/cable_modelB/: cable_modelB.sdf  cable_modelB.xacro  model.config
models/cable_modelC/: cable_modelC.sdf  cable_modelC.xacro  model.config
models/cable_modelD/: cable_modelD.sdf  cable_modelD.xacro  model.config
models/cable_modelE/: cable_modelE.sdf  cable_modelE.xacro  model.config
models/gripper/: gripper.sdf  gripper.xacro  model.config
models/gripper_model/: model.config  model.sdf  model.xacro
models/gripper_model/meshes/: gripper_finger.stl
models/iris_tiltrotor/: iris_tiltrotor.sdf  model.config
models/pulley/: model.config  pulley.sdf  pulley.xacro
models/tree/: model.config  model.sdf
position_attitude_loops_ODEs/: LQR_controller_pitching.m  MPC_controller_pitching.m  MPC_vs_LQR.m  Schur_solver.m  controller_parameters.m  controller_parameters_model_3_and_4.m  controller_parameters_model_5_and_6.m  euler_to_body_angvel.m  plots.m  rotation_matrices.m  simulation_parameters.m  tiltrotor_model3.slx  tiltrotor_model4.slx  tiltrotor_model5.slx  tiltrotor_model6.slx
position_attitude_loops_Simscape/: Body2Inertial.m  CoG_shift.m  MPC_controller_full.m  controller_parameters.m  integration_LQR_model_4.slx  integration_LQR_model_5.slx  integration_MPC_model_6.slx  integration_MPC_model_7.slx  integration_PID_model_3.slx  integration_parameters.m  integration_plot.m  optimal_controller_pitching.m  simulation_parameters.m
src/: flight_controller.cpp
tiltrotor_drone_LMPC/config/: flight_controller.cfg
tiltrotor_drone_LMPC/include/: flight_controller.h  mpc_solver.hpp  wrench_estimator.hpp
tiltrotor_drone_LMPC/launch/: flight_controller.launch
tiltrotor_drone_LMPC/src/: flight_controller.cpp  flight_controller_main.cpp  mpc_solver.cpp  wrench_estimator.cpp
tiltrotor_drone_LQR/: CMakeLists.txt  flight_controller.h
tiltrotor_drone_LQR/include/: flight_controller.h
tiltrotor_drone_LQR/launch/: flight_controller.launch
tiltrotor_drone_LQR/src/: flight_controller.cpp  flight_controller_main.cpp
tiltrotor_drone_MPC/: CMakeLists.txt
tiltrotor_drone_MPC/include/: flight_controller.h  mpc_solver.hpp  wrench_estimator.hpp
tiltrotor_drone_MPC/launch/: flight_controller.launch
tiltrotor_drone_MPC/src/: flight_controller.cpp  flight_controller_main.cpp  mpc_solver.cpp  wrench_estimator.cpp
tiltrotor_drone_NLMPC/: package.xml
tiltrotor_drone_NLMPC/config/: flight_controller.cfg
tiltrotor_drone_NLMPC/include/: flight_controller.h  mpc_solver.hpp  wrench_estimator.hpp
tiltrotor_drone_NLMPC/launch/: flight_controller.launch
tiltrotor_drone_NLMPC/src/: flight_controller.cpp  mpc_solver.cpp  wrench_estimator.cpp
tiltrotor_drone_NLMPC_new/config/: flight_controller.cfg
tiltrotor_drone_NLMPC_new/include/: flight_controller.h  wrench_estimator.hpp
tiltrotor_drone_NLMPC_new/src/: flight_controller.cpp  mpc_solver.cpp
tiltrotor_drone_PID/: package.xml
tiltrotor_drone_PID/include/: flight_controller.h
tiltrotor_drone_PID/launch/: flight_controller.launch
tiltrotor_drone_PID/src/: flight_controller.cpp
tiltrotor_drone_interaction/config/: flight_controller.cfg
tiltrotor_drone_interaction/include/: flight_controller.h  mpc_solver.hpp
tiltrotor_drone_interaction/src/: flight_controller.cpp  mpc_solver.cpp
