<?xml version="1.0"?>
<package format="2">
    <name>tiltrotor_drone</name>
    <version>0.0.0</version>
    <description>The tiltrotor_drone package</description>

    <maintainer email="efe_camci@i2r.a-star.edu.sg">Efe Camci</maintainer>
    <maintainer email="yuntingchen992@gmail.com">Yun Ting Chen</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>mavros_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>casadi</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>qpOASES</build_depend>

    <build_export_depend>mavros_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>tf2</build_export_depend>
    <build_export_depend>tf2_ros</build_export_depend>
    <build_export_depend>dynamic_reconfigure</build_export_depend>
    <build_export_depend>casadi</build_export_depend>
    <build_export_depend>eigen</build_export_depend>
    <build_export_depend>qpOASES</build_export_depend>

    <exec_depend>mavros_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>casadi</exec_depend>
    <exec_depend>eigen</exec_depend>
    <exec_depend>qpOASES</exec_depend>

    <export>
    </export>
</package>
